<resources>
    <string name="app_name">Stock Management</string>
    <string name="home_icon_desc">Stock Management</string>
    <string name="empty_product_text">No Product Found</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">K Cirque IT</string>
    <string name="nav_header_subtitle">stock management system</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="add_category_text">Add Category</string>
    <string name="enter_category_hint_text">Enter Category Name</string>
    <string name="category_name_text">Category Name</string>
    <string name="add_btn_text">Add</string>
    <string name="cancel_btn_text">Cancel</string>
    <string name="select_category_text">Select Category</string>
    <string name="product_name_text">Product Name</string>
    <string name="stock_product_name_text">Product\nName</string>
    <string name="enter_product_name_text">Enter Product Name</string>
    <string name="product_desc_text">Description</string>
    <string name="product_code_text">Product Code</string>
    <string name="add_product_text">Add Product</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_company_name_text">Company Name</string>
    <string name="purchase_quantity_text">Quantity</string>
    <string name="purchase_buy_price_text">Buy Price</string>
    <string name="purchase_sell_price_text">Sell Price</string>
    <string name="due_amount_text">Due Amount</string>
    <string name="paid_amount_text">Paid Amount</string>
    <string name="total_amount_text">Total Amount</string>
    <string name="purchase_date_text">Purchase Date</string>
    <string name="customer_name_text">Customer Name</string>
    <string name="customer_address_text">Address</string>
    <string name="customer_mobile_text">Mobile</string>
    <string name="customer_email_text">Email</string>
    <string name="select_product_text">Select Product</string>
    <string name="select_customer_text">Customer</string>
    <string name="sales_date_text">Sales date</string>
    <string name="sales_date">25/09/2018</string>
    <string name="product_description_text">Description</string>
    <string name="unit_price_text">Unit Price</string>
    <string name="quantity_text">Qty</string>
    <string name="amount_text">Amount</string>
    <string name="sub_total_text">Subtotal</string>
    <string name="discount_text">Discount</string>
    <string name="total_text">Total</string>
    <string name="paid_text">Paid</string>
    <string name="due_text">Total Due</string>
    <string name="product_text">Product</string>
    <string name="price_text">Price</string>
    <string name="sell_btn_text">Sale Product</string>
    <string name="purchase_qty_text">Total Purchase</string>
    <string name="sell_qty_text">Total Sales</string>
    <string name="stock_hand_text">Stock on Hand</string>
    <string name="id_text">ID</string>
    <string name="advanced_paid_text">Advanced Paid</string>
    <string name="deposit_text">Due</string>
    <string name="reminder">Reminder</string>
    <string name="upload_success">Success</string>
    <string name="upload_failure">Failed</string>
    <string name="product_alert_title">Please, purchase more product</string>
    <string name="sales_reports_text">Sales Reports</string>
    <string name="total_sell_amount">Amount</string>
    <string name="client_text">Client</string>
    <string name="product_less_warning">These Product are going finish</string>
    <string name="purchase_text">Purchase</string>
    <string name="empty_stock_out">Empty Sales</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="dont_account">not register yet, contact admin</string>
    <string name="email_required_text">Email required</string>
    <string name="password_required_text">Password required</string>
    <string name="invalid_email_text">Invalid email</string>
    <string name="user_type">User type</string>
    <string name="invalid_email_pass_text">email or password are invalid</string>
    <string name="add_seller">Add Seller</string>
    <string name="seller_name_text">Seller Name</string>
    <string name="confirm_password_text">Confirm Password</string>
    <string name="name_required">Name required</string>
    <string name="logout_text">Logout</string>
    <string name="expense_text">Expense</string>
    <string name="select_date_text">Select Date</string>
    <string name="comment_optional_text">Comment (Optional)</string>
    <string name="add_new_expense_text">Add New Expense</string>
    <string name="expense_name_text">Expense Name</string>
    <string name="total_purchase_text">Total Purchase</string>
    <string name="total_cost">Total Cost</string>
    <string name="total_stock_hand_text">Stock Hand</string>
    <string name="total_sell_text">Total Sell</string>
    <string name="total_profit">Total Profit</string>
    <string name="tap_to_select_image_text">Tap to select Image</string>
    <string name="empty_expense_text">Empty Expense Found</string>
    <string name="breakfast_text">Breakfast</string>
    <string name="date_21_05_2018_text">Date:21/05/2018</string>
    <string name="tk_text">80 TK</string>
    <string name="home_text">Home</string>
    <string name="mercantile_account">Mercantile</string>
    <string name="normal_account_text">Normal</string>
    <string name="account_type_text">Account Type</string>
    <string name="stock_management_text">Stock Management</string>
    <string name="seller_text">Seller</string>
    <string name="message_hint_text">Type a message</string>
    <string name="message_text">Message</string>
    <string name="empty_customer_text">No Customer Found</string>
    <string name="empty_seller_text">No Seller Found</string>
    <string name="empty_due_text">There is no Due</string>
    <string name="empty_reminder_text">No Reminder Found</string>
    <string name="date_text">Date</string>
    <string name="date_between_text">Date Between</string>
    <string name="search_text">Search</string>
    <string name="daily_report_text">Daily Reports</string>
    <string name="sl_no_text">SL No</string>
    <string name="empty_purchase_text">Empty Purchase Found</string>
    <string name="emp_sal_text">Employee Salary</string>
    <string name="salary_text">Salary</string>
    <string name="month_text">Month</string>
    <string name="total_salary_text">Total Salary</string>
    <string name="empty_salary_text">No given salary yet</string>
    <string name="call_seller">Call Seller</string>
    <string name="send_msg">Send Message</string>
    <string name="cancel_text">Cancel</string>
    <string name="answer_text">Answer</string>
    <string name="incoming_call_text">Incoming call</string>
    <string name="sample_user_text">Sample user</string>
    <string name="name_text">Name</string>
    <string name="total_due_text">Total Due</string>
    <string name="empty_sales_text">Empty Sales Found</string>
    <string name="comment_text">Comment</string>
    <string name="change_password_text">Change Password</string>
    <string name="reminder_count_text">Set Reminder Count</string>
    <string name="username_text">Username</string>
    <string name="reminder_count">Reminder Count</string>
    <string name="old_password_text">Old Password</string>
    <string name="new_password_text">New Password</string>
    <string name="profit_loss_text">Profit Loss</string>
    <string name="total_sales_text">Total Sales</string>
    <string name="year_text">Year</string>
    <string name="internet_connection_text">No internet connection found. \nCheck your connection</string>
    <string name="registration_expired_text">Your registration was expired.\nPlease contact with us</string>
    <string name="export_to_xl">Export 2 XL</string>
    <string name="band_text">Brand</string>
    <string name="update_customer">Update Customer</string>
    <string name="status_text">Status</string>
    <string name="update_seller">Update</string>
    <string name="active_text">Active</string>
    <string name="deactivate_text">Deactivate</string>
    <string name="delete_seller">Delete Seller</string>
    <string name="payment_due_text">Payment Due Amount</string>
    <string name="APP_ID">ca-app-pub-5235443421854743~8317584001</string>
    <string name="BANNER_AD_ID">ca-app-pub-5235443421854743/9538757210</string>
    <string name="REWARDED_VIDEO_AD_ID">ca-app-pub-5235443421854743/5801981743</string>
    <string name="INTERSTITIAL_AD_ID">ca-app-pub-5235443421854743/2872566075</string>
    <string name="supplier_text">Supplier</string>
    <string name="due_purchase">Due</string>
    <string name="qty_text">Quantity</string>
    <string name="payable_text">Payable</string>
    <string name="old_price_text">Old Price</string>
    <string name="contact_us">Mobile: +8801877-100000, \t\t+8801777-888661 \nWeb: www.kcirqueit.com \nSupport: info@kcirqueit.com, support@kcirqueit.com \nAddress: House-1/C,Road- 02, Sector-03, Uttara, Dhaka-1230</string>
    <string name="kcirqueit">KCirque IT</string>
    <string name="instruction_text">Stock Management app. this app uses to manage you stock. you can purchase, sales, customer, supplier,product etc. this provide also sales reports,stock reports, profit loss reports erc.\n
        \n\nInstruction:\n1. Click on menu icon and add Category.\n2. Click on Product option then click plus (+) icon then add product.\n3. Click on menu icon and go to Supplier then add Supplier
    \n4. Click Stock In then give the information and purchase the product.\n5. Click on Customer option and add Customer. \n6. Click to Sales option for sell product. give valid information and sell product.
    \n7. For add expense click on menu icon then go to expense then add expense. \n8. For add Seller click on menu icon then go to Seller then add Seller.\n9. For giving salary to seller click on menu icon go to salary then add salary.
        \n10. For send message seller or admin go to message and send message.\n11.You can see Sales report (today, 7 days, last week, 30 days, last month) click on menu icon then go to sales reports.\n12.You can see daily reports(sales, purchase, expense) by click daily reports.
    \n13. You can see total due from customer click total due. in due you see list of customer which have due. click each customer for details and pay due.\n14. For see profit loss click on profit loss option then choose type of profit loss.
    \n15. You can export your data into excel format. click on menu icon then click Export2XL.</string>
    <string name="item_text">Qty : Name</string>
    <string name="print_text">Print</string>
    <string name="print_preview_text">Print Preview</string>
    <string name="skip_text">Skip</string>
    <string name="support_text">Support</string>
    <string name="about_text">About App</string>
    <string-array name="stock_out_type">
        <item name="today_stock_text">Today Sales Reports</item>
        <item name="last_7_day_stock_text">7 Day\'s Sales Reports</item>
        <item name="week_stock_text">Last Week Sales Reports</item>
        <item name="last_30_stock_text">30 Day\'s Sales Reports</item>
        <item name="monthly_stock_text">Last Month Sales Reports</item>
    </string-array>
</resources>