<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/category_name_textview"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category_name_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

    <EditText
        android:id="@+id/category_name_edit_text"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/category_name_textview"
        android:hint="@string/enter_category_hint_text"/>

    <RelativeLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/category_name_edit_text">

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="100dp"
            android:padding="3dp"
            android:text="@string/cancel_btn_text"
            android:layout_alignParentRight="true"
            android:layout_marginRight="100dp" />

        <Button
            android:id="@+id/add_btn"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="10dp"
            android:padding="3dp"
            android:text="@string/add_btn_text"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

</RelativeLayout>