<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/product_id_textview"
            style="@style/TextViewPadding"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="16sp"
            tools:text="@string/id_text" />

        <TextView
            android:id="@+id/product_name_textview"
            style="@style/TextViewPadding"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="start"
            android:textAlignment="viewStart"
            android:textSize="16sp"
            tools:text="@string/product_name_text" />

        <TextView
            android:id="@+id/stock_hand_text_view"
            style="@style/TextViewPadding"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="end"
            android:textAlignment="center"
            android:textSize="16sp"
            tools:text="@string/stock_hand_text" />

        <Button
            android:id="@+id/add_purchase_btn"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:text="@string/purchase_text"
            android:textAllCaps="false"
            android:textColor="@android:color/black" />


    </LinearLayout>
</LinearLayout>