<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".IncomingCallActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffffff"
        android:orientation="vertical"
        android:weightSum="5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#fffafafa"
            android:orientation="vertical">

            <TextView
                android:id="@+id/remoteUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="14dp"
                android:text="@string/sample_user_text"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/callState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/incoming_call_text"
                android:textAllCaps="true"
                android:textSize="16sp" />

        </LinearLayout>


        <RelativeLayout
            android:id="@+id/bottomPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:gravity="center">

            <Button
                android:id="@+id/answerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/answer_text"
                android:textSize="20sp" />

            <Button
                android:id="@+id/declineButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_toEndOf="@+id/answerButton"
                android:layout_toRightOf="@+id/answerButton"
                android:text="@string/cancel_text"
                android:textSize="20sp" />

        </RelativeLayout>

    </RelativeLayout>
</layout>