<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/customer_name_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textAlignment="viewStart"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp"
            tools:text="@string/customer_name_text" />

        <TextView
            android:id="@+id/due_date_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textAlignment="viewStart"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp"
            tools:text="@string/date_text" />

        <TextView
            android:id="@+id/due_amount_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textAlignment="viewStart"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp"
            tools:text="@string/total_due_text" />
    </LinearLayout>



    <LinearLayout
        android:id="@+id/due_layout"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/total_due_text_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="16sp"
            android:textAlignment="viewStart"
            android:textColor="@android:color/white"
            tools:text="@string/total_text" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textAlignment="viewStart"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp"
            tools:text="@string/date_text" />

        <TextView
            android:id="@+id/total_due_amount_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:textSize="16sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textAlignment="viewStart"
            android:textColor="@android:color/white"
            tools:text="@string/due_amount_text" />

    </LinearLayout>
</LinearLayout>